--- a/index.html
+++ b/index.html
@@ -7,50 +7,53 @@
   <title>Apple</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <link rel="icon" href="./img/favicon.ico">
 </head>
 <body>
-  <!-- start container -->
-  <div class="container">
-    <!-- start header -->
-    <header>
+  <!-- start header -->
+  <header>
+    <div class="container">
       <nav>
         <ul>
-          <li>
-            <a href="#"><i class="fa fa-apple"></i></a>
-            <a href="#">Mac</a>
-            <a href="#">iPad</a>
-            <a href="#">iPhone</a>
-            <a href="#">Watch</a>
-            <a href="#">TV</a>
-            <a href="#">Music</a>
-            <a href="#">Support</a>
-            <a href="#"><i class="fa fa-search"></i></a>
-            <a href="#"><i class="fa fa-shopping-cart"></i></a>
-          </li>
+          <li><a href="https://github.com/ndc07"><i class="fa fa-apple"></i></a></li>
+          <li><a href="https://github.com/ndc07">Mac</a></li>
+          <li><a href="https://github.com/ndc07">iPad</a></li>
+          <li><a href="https://github.com/ndc07">iPhone</a></li>
+          <li><a href="https://github.com/ndc07">Watch</a></li>
+          <li><a href="https://github.com/ndc07">TV</a></li>
+          <li><a href="https://github.com/ndc07">Music</a></li>
+          <li><a href="https://github.com/ndc07">Support</a></li>
+          <li><a href="https://github.com/ndc07"><i class="fa fa-search"></i></a></li>
+          <li><a href="https://github.com/ndc07"><i class="fa fa-shopping-cart"></i></a></li>
         </ul>
       </nav>
-    </header>
-    <!-- end header -->
+    </div>
+  </header>
+  <!-- end header -->
 
-    <!-- start banner iphone xs -->
-    <section class="banner-iphone-xs">
-      <div class="content-banner">
+  <!-- start banner iphone xs -->
+  <section class="banner banner-iphone-xs">
+    <div class="container">
+      <div class="banner-content">
         <img src="https://www.apple.com/v/home/dx/images/logos/iphone_xs_logo_hero_large.png" alt="iPhone XS Logo">
         <h3>Welcome to the big screens.</h3>
         <div class="links-banner">
-          <span>Learn more<i class="fa fa-angle-right"></i></span>
-          <span>Buy<i class="fa fa-angle-right"></i></span>
+          <a href="https://github.com/ndc07">Learn more<i class="fa fa-angle-right"></i></a>
+          <a href="https://github.com/ndc07">Buy<i class="fa fa-angle-right"></i></a>
         </div>
       </div>
       <div class="img-banner">
         <img src="https://www.apple.com/v/home/dx/images/heroes/iphone-xs/iphone_xs_large.jpg" alt="iPhone XS">
       </div>
-    </section>
-    <!-- end banner iphone xs -->
+    </div>
+  </section>
+  <!-- end banner iphone xs -->
 
-    <!-- start banner iphone xr -->
-    <section class="banner-iphone-xr">
-      <div class="content-banner">
+  <!-- start banner iphone xr -->
+  <section class="banner banner-iphone-xr">
+    <div class="container">
+      <div class="banner-content">
         <img src="https://www.apple.com/v/home/dx/images/logos/iphone_xr_logo_hero_large.png" alt="iPhone XS Logo">
         <h3>Brilliant. In every way.</h3>
         <p>Pre-order 10.19</p>
@@ -58,51 +61,52 @@
       <div class="img-banner">
         <img src="https://www.apple.com/v/home/dx/images/heroes/iphone-xr/iphone_xr_large.jpg" alt="iPhone XS">
       </div>
-    </section>
-    <!-- end banner iphone xr -->
+    </div>
+  </section>
+  <!-- end banner iphone xr -->
 
-    <!-- start banner watch -->
-    <section class="banner-watch">
-      <div class="content-banner">
+  <!-- start banner watch -->
+  <section class="banner banner-watch">
+    <div class="container">
+      <div class="banner-content">
         <img src="https://www.apple.com/v/home/dx/images/logos/apple_watch_series_4_logo_hero_large.jpg" alt="Apple Watch Logo">
-        <h3>All new. For a better you.</h3>
+        <h3 class="banner-title">All new. For a better you.</h3>
         <div class="links-banner">
-          <span>Learn more<i class="fa fa-angle-right"></i></span>
-          <span>Buy<i class="fa fa-angle-right"></i></span>
+          <a href="https://github.com/ndc07">Learn more<i class="fa fa-angle-right"></i></a>
+          <a href="https://github.com/ndc07">Buy<i class="fa fa-angle-right"></i></a>
         </div>
       </div>
       <div class="img-banner">
         <img src="https://www.apple.com/v/home/dx/images/heroes/apple-watch-series-4/apple_watch_series_4_large.jpg" alt="Apple Watch">
       </div>
-    </section>
-    <!-- end banner watch -->
+    </div>
+  </section>
+  <!-- end banner watch -->
 
-    <!-- start banner music & airpods -->
-    <section class="banner-music-airpods">
+  <!-- start banner music & airpods -->
+  <section class="banner banner-music-airpods">
+    <div class="container">
       <!-- start banner music -->
-      <div class="music">
-        <div class="content-banner">
+      <div class="banner-1 banner-music">
+        <div class="banner-content">
           <img src="https://www.apple.com/v/home/dx/images/logos/music_large.png" alt="Apple Music Logo">
-          <h3>Lose yourself in 50 million songs.</h3>
+          <h4>Lose yourself in 50 million songs.</h4>
           <div class="links-banner">
-            <span>Try it free*<i class="fa fa-angle-right"></i></span>
-            <span>Learn more<i class="material-icons">call_made</i></span>
+            <a href="https://github.com/ndc07">Try it free*<i class="fa fa-angle-right"></i></a>
+            <a href="https://github.com/ndc07">Learn more<i class="fa fa-angle-right"></i></a>
           </div>
-        </div>
-        <div class="img-banner">
-          <img src="https://www.apple.com/v/home/dx/images/promos/apple-music/apple_music_large.jpg" alt="Apple Music">
           <img src="https://www.apple.com/v/home/dx/images/promos/apple-music/icon_apple_music_large.png" alt="Apple Music">
         </div>
       </div>
       <!-- end banner music -->
       <!-- start banner airpods -->
-      <div class="banner-airpods">
-        <div class="content-banner">
+      <div class="banner-2 banner-airpods">
+        <div class="banner-content">
           <h4>AirPods</h4>
           <h5>Wireless. Effortless. Magical.</h5>
           <div class="links-banner">
-            <span>Learn more<i class="fa fa-angle-right"></i></span>
-            <span>Buy<i class="fa fa-angle-right"></i></span>
+            <a href="https://github.com/ndc07">Learn more<i class="fa fa-angle-right"></i></a>
+            <a href="https://github.com/ndc07">Buy<i class="fa fa-angle-right"></i></a>
           </div>
         </div>
         <div class="img-banner">
@@ -110,24 +114,25 @@
         </div>
       </div>
       <!-- end banner airpods -->
-    </section>
-    <!-- end banner music & airpods -->
+    </div>
+  </section>
+  <!-- end banner music & airpods -->
 
-    <!-- start banner giveback & homepod -->
-    <section class="banner-giveback-homepod">
+  <!-- start banner giveback & homepod -->
+  <section class="banner banner-giveback-homepod">
+    <div class="container">
       <!-- start banner giveback -->
-      <div class="banner-giveback">
-        <div class="content-banner">
+      <div class="banner-1 banner-giveback">
+        <div class="banner-content">
           <h4>Apple GiveBack</h4>
           <h5>
             Trade in your old device
             <br/>
             for credit toward a new one.
-          </br/>
           </h5>
           <div class="links-banner">
-            <span>Learn more<i class="fa fa-angle-right"></i></span>
-            <span>Buy<i class="fa fa-angle-right"></i></span>
+            <a href="https://github.com/ndc07">Learn more<i class="fa fa-angle-right"></i></a>
+            <a href="https://github.com/ndc07">Buy<i class="fa fa-angle-right"></i></a>
           </div>
         </div>
         <div class="img-banner">
@@ -136,13 +141,13 @@
       </div>
       <!-- end banner banner giveback -->
       <!-- start banner homepod -->
-      <div class="banner-homepod">
-        <div class="content-banner">
+      <div class="banner-2 banner-homepod">
+        <div class="banner-content">
           <h4>HomePod</h4>
           <h5>The new sound of home.</h5>
           <div class="links-banner">
-            <span>Learn more<i class="fa fa-angle-right"></i></span>
-            <span>Buy<i class="fa fa-angle-right"></i></span>
+            <a href="https://github.com/ndc07">Learn more<i class="fa fa-angle-right"></i></a>
+            <a href="https://github.com/ndc07">Buy<i class="fa fa-angle-right"></i></a>
           </div>
         </div>
         <div class="img-banner">
@@ -150,19 +155,21 @@
         </div>
       </div>
       <!-- end banner homepod -->
-    </section>
-    <!-- end banner giveback & homepod -->
+    </div>
+  </section>
+  <!-- end banner giveback & homepod -->
 
-    <!-- start banner macbookpro & ipad -->
-    <section class="banner-macbookpro-ipad">
+  <!-- start banner macbookpro & ipad -->
+  <section class="banner banner-macbookpro-ipad">
+    <div class="container">
       <!-- start banner macbookpro -->
-      <div class="banner-macbookpro">
-        <div class="content-banner">
+      <div class="banner-1 banner-macbookpro">
+        <div class="banner-content">
           <h4>MacBook Pro</h4>
           <h5>More power. More performance. More pro.</h5>
           <div class="links-banner">
-            <span>Learn more<i class="fa fa-angle-right"></i></span>
-            <span>Buy<i class="fa fa-angle-right"></i></span>
+            <a href="https://github.com/ndc07">Learn more<i class="fa fa-angle-right"></i></a>
+            <a href="https://github.com/ndc07">Buy<i class="fa fa-angle-right"></i></a>
           </div>
         </div>
         <div class="img-banner">
@@ -171,13 +178,13 @@
       </div>
       <!-- end banner macbookpro -->
       <!-- start banner ipad -->
-      <div class="banner-ipad">
-        <div class="content-banner">
+      <div class="banner-2 banner-ipad">
+        <div class="banner-content">
           <h4>iPad</h4>
           <h5>Like a computer. Unlike any computer.</h5>
           <div class="links-banner">
-            <span>Learn more<i class="fa fa-angle-right"></i></span>
-            <span>Buy<i class="fa fa-angle-right"></i></span>
+            <a href="https://github.com/ndc07">Learn more<i class="fa fa-angle-right"></i></a>
+            <a href="https://github.com/ndc07">Buy<i class="fa fa-angle-right"></i></a>
           </div>
         </div>
         <div class="img-banner">
@@ -185,11 +192,13 @@
         </div>
       </div>
       <!-- end banner ipad -->
-    </section>
-    <!-- end banner macbookpro & ipad -->
+    </div>
+  </section>
+  <!-- end banner macbookpro & ipad -->
 
-    <!-- start footer -->
-    <footer>
+  <!-- start footer -->
+  <footer>
+    <div class="container">
       <!-- start directory-with-5-columns -->
       <nav class="directory-with-5-columns">
         <!-- start colum 1 -->
@@ -197,17 +206,17 @@
           <div class="directory-column-section">
             <p class="directory-label">Shop and Learn</p>
             <ul>
-              <li><a href="#">Mac</a></li>
-              <li><a href="#">iPad</a></li>
-              <li><a href="#">iPhone</a></li>
-              <li><a href="#">Watch</a></li>
-              <li><a href="#">TV</a></li>
-              <li><a href="#">Music</a></li>
-              <li><a href="#">iTunes</a></li>
-              <li><a href="#">HomePod</a></li>
-              <li><a href="#">iPod touch</a></li>
-              <li><a href="#">Accessories</a></li>
-              <li><a href="#">Gift Cards</a></li>
+              <li><a href="https://github.com/ndc07">Mac</a></li>
+              <li><a href="https://github.com/ndc07">iPad</a></li>
+              <li><a href="https://github.com/ndc07">iPhone</a></li>
+              <li><a href="https://github.com/ndc07">Watch</a></li>
+              <li><a href="https://github.com/ndc07">TV</a></li>
+              <li><a href="https://github.com/ndc07">Music</a></li>
+              <li><a href="https://github.com/ndc07">iTunes</a></li>
+              <li><a href="https://github.com/ndc07">HomePod</a></li>
+              <li><a href="https://github.com/ndc07">iPod touch</a></li>
+              <li><a href="https://github.com/ndc07">Accessories</a></li>
+              <li><a href="https://github.com/ndc07">Gift Cards</a></li>
             </ul>
           </div>
         </div>
@@ -217,17 +226,17 @@
           <div class="directory-column-section">
             <p class="directory-label">Apple Store</p>
             <ul>
-              <li><a href="#">Find a Store</a></li>
-              <li><a href="#">Genius Bar</a></li>
-              <li><a href="#">Today at Apple</a></li>
-              <li><a href="#">Apple Camp</a></li>
-              <li><a href="#">Field Trip</a></li>
-              <li><a href="#">Apple Store App</a></li>
-              <li><a href="#">Refurbished and Clearance</a></li>
-              <li><a href="#">Financing</a></li>
-              <li><a href="#">Apple GiveBack</a></li>
-              <li><a href="#">Order Status</a></li>
-              <li><a href="#">Shopping Help</a></li>
+              <li><a href="https://github.com/ndc07">Find a Store</a></li>
+              <li><a href="https://github.com/ndc07">Genius Bar</a></li>
+              <li><a href="https://github.com/ndc07">Today at Apple</a></li>
+              <li><a href="https://github.com/ndc07">Apple Camp</a></li>
+              <li><a href="https://github.com/ndc07">Field Trip</a></li>
+              <li><a href="https://github.com/ndc07">Apple Store App</a></li>
+              <li><a href="https://github.com/ndc07">Refurbished and Clearance</a></li>
+              <li><a href="https://github.com/ndc07">Financing</a></li>
+              <li><a href="https://github.com/ndc07">Apple GiveBack</a></li>
+              <li><a href="https://github.com/ndc07">Order Status</a></li>
+              <li><a href="https://github.com/ndc07">Shopping Help</a></li>
             </ul>
           </div>
         </div>
@@ -237,15 +246,15 @@
           <div class="directory-column-section">
             <p class="directory-label">For Education</p>
             <ul>
-              <li><a href="#">Apple and Education</a></li>
-              <li><a href="#">Shop for College</a></li>
+              <li><a href="https://github.com/ndc07">Apple and Education</a></li>
+              <li><a href="https://github.com/ndc07">Shop for College</a></li>
             </ul>
           </div>
           <div class="directory-column-section">
             <p class="directory-label">For Business</p>
             <ul>
-              <li><a href="#">Apple and Business</a></li>
-              <li><a href="#">Shop for Business</a></li>
+              <li><a href="https://github.com/ndc07">Apple and Business</a></li>
+              <li><a href="https://github.com/ndc07">Shop for Business</a></li>
             </ul>
           </div>
         </div>
@@ -255,20 +264,20 @@
           <div class="directory-column-section">
             <p class="directory-label">Account</p>
             <ul>
-              <li><a href="#">Manage Your Apple ID</a></li>
-              <li><a href="#">Apple Store Account</a></li>
-              <li><a href="#">iCloud.com</a></li>
+              <li><a href="https://github.com/ndc07">Manage Your Apple ID</a></li>
+              <li><a href="https://github.com/ndc07">Apple Store Account</a></li>
+              <li><a href="https://github.com/ndc07">iCloud.com</a></li>
             </ul>
           </div>
           <div class="directory-column-section">
             <p class="directory-label">Apple Values</p>
             <ul>
-              <li><a href="#">Accessibility</a></li>
-              <li><a href="#">Education</a></li>
-              <li><a href="#">Environment</a></li>
-              <li><a href="#">Inclusion and Diversity</a></li>
-              <li><a href="#">Privacy</a></li>
-              <li><a href="#">Supplier Responsibility</a></li>
+              <li><a href="https://github.com/ndc07">Accessibility</a></li>
+              <li><a href="https://github.com/ndc07">Education</a></li>
+              <li><a href="https://github.com/ndc07">Environment</a></li>
+              <li><a href="https://github.com/ndc07">Inclusion and Diversity</a></li>
+              <li><a href="https://github.com/ndc07">Privacy</a></li>
+              <li><a href="https://github.com/ndc07">Supplier Responsibility</a></li>
             </ul>
           </div>
         </div>
@@ -278,12 +287,12 @@
           <div class="directory-column-section">
             <p class="directory-label">About Apple</p>
             <ul>
-              <li><a href="#">Newsroom</a></li>
-              <li><a href="#">Apple Leadership</a></li>
-              <li><a href="#">Job Opportunities</a></li>
-              <li><a href="#">Investors</a></li>
-              <li><a href="#">Events</a></li>
-              <li><a href="#">Contact Apple</a></li>
+              <li><a href="https://github.com/ndc07">Newsroom</a></li>
+              <li><a href="https://github.com/ndc07">Apple Leadership</a></li>
+              <li><a href="https://github.com/ndc07">Job Opportunities</a></li>
+              <li><a href="https://github.com/ndc07">Investors</a></li>
+              <li><a href="https://github.com/ndc07">Events</a></li>
+              <li><a href="https://github.com/ndc07">Contact Apple</a></li>
             </ul>
           </div>
         </div>
@@ -297,21 +306,20 @@
         </div>
         <div class="footer-legal-center">
           <ul>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Use</a></li>
-            <li><a href="#">Sales and Refunds</a></li>
-            <li><a href="#">Legal</a></li>
-            <li><a href="#">Site Map</a></li>
+            <li><a href="https://github.com/ndc07">Privacy Policy</a></li>
+            <li><a href="https://github.com/ndc07">Terms of Use</a></li>
+            <li><a href="https://github.com/ndc07">Sales and Refunds</a></li>
+            <li><a href="https://github.com/ndc07">Legal</a></li>
+            <li><a href="https://github.com/ndc07">Site Map</a></li>
           </ul>
         </div>
         <div class="footer-legal-right">
-          <a href="#"><img src="https://images.apple.com/ac/flags/1/images/us/16.png"/>United States</a>
+          <a href="https://github.com/ndc07"><img src="https://images.apple.com/ac/flags/1/images/us/16.png"/>United States</a>
         </div>
       </div>
       <!-- end copyright -->
-    </footer>
-    <!-- end footer -->
-  </div>
-  <!-- end container -->
+    </div>
+  </footer>
+  <!-- end footer -->
 </body>
 </html>
