css other banner

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <img src="https://www.apple.com/v/home/dx/images/promos/give-back/give_back_large.jpg" alt="GiveBack">
         </div>
       </div>
-      <!-- end banner banner giveback -->
+      <!-- end banner giveback -->
       <!-- start banner homepod -->
       <div class="banner-2 banner-homepod">
         <div class="banner-content">
@@ -172,9 +172,9 @@
             <a href="https://github.com/ndc07">Buy<i class="fa fa-angle-right"></i></a>
           </div>
         </div>
-        <div class="img-banner">
+        <!-- <div class="img-banner">
           <img src="https://www.apple.com/v/home/dx/images/promos/macbook-pro/macbook_pro_performance_large.jpg" alt="Macbook Pro">
-        </div>
+        </div> -->
       </div>
       <!-- end banner macbookpro -->
       <!-- start banner ipad -->
