--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <li><a href="https://github.com/ndc07">Shop for College</a></li>
             </ul>
           </div>
-          <div class="directory-column-section">
+          <div class="directory-column-section directory-column-section-2">
             <p class="directory-label">For Business</p>
             <ul>
               <li><a href="https://github.com/ndc07">Apple and Business</a></li>
@@ -269,7 +269,7 @@
               <li><a href="https://github.com/ndc07">iCloud.com</a></li>
             </ul>
           </div>
-          <div class="directory-column-section">
+          <div class="directory-column-section directory-column-section-2">
             <p class="directory-label">Apple Values</p>
             <ul>
               <li><a href="https://github.com/ndc07">Accessibility</a></li>
@@ -321,5 +321,6 @@
     </div>
   </footer>
   <!-- end footer -->
+  <script type="text/javascript" scr="./js/index.js"></script>
 </body>
 </html>
